Replaced Ghosts with skeletons