@@ -77,7 +77,7 @@ public class LevelGameArea extends GameArea {
   };
 
   private static final String[] entityAtlases = {
-    "images/ghost.atlas", "images/ghostKing.atlas", "images/gold_coin/gold_coin.atlas"
+    "images/ghost.atlas", "images/ghostKing.atlas", "images/gold_coin/gold_coin.atlas", "images/skeleton.atlas"
   };
 
   private static final String BACKGROUND_MUSIC = "sounds/BGM_03_mp3.mp3";
@@ -308,15 +308,16 @@ public class LevelGameArea extends GameArea {
     if (type == null) {
       return null;
     }
-    switch (type.toLowerCase()) {
-      case "ghost":
-        return NPCFactory.createGhost(player);
-      case "ghostking", "ghost_king":
-        return NPCFactory.createGhostKing(player);
-      default:
-        logger.warn("Unknown enemy spawn type '{}' - skipped", type);
-        return null;
-    }
+      return switch (type.toLowerCase()) {
+          case "ghost" -> NPCFactory.createGhost(player);
+          case "ghostking", "ghost_king" -> NPCFactory.createGhostKing(player);
+          case "skeleton" -> NPCFactory.createSkeleton(player);
+          case "rangedskeleton", "ranged_skeleton" -> NPCFactory.createRangedSkeleton(player);
+          default -> {
+              logger.warn("Unknown enemy spawn type '{}' - skipped", type);
+              yield null;
+          }
+      };
   }
 
   /**
@@ -354,7 +355,7 @@ public class LevelGameArea extends GameArea {
    */
   private GridPoint2 lootRowStart() {
     if (!mapData.getSpawns().getLoot().isEmpty()) {
-      return mapData.getSpawns().getLoot().get(0).getPosition();
+      return mapData.getSpawns().getLoot().getFirst().getPosition();
     }
     GridPoint2 playerSpawn = mapData.getSpawns().getPlayer();
     if (playerSpawn != null) {
